{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 680,
  "lineage": "7eee27a8-e726-cbe7-15b9-e5dffd7186b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412092862769:internet-gateway/igw-05be889888911be3a",
            "id": "igw-05be889888911be3a",
            "owner_id": "412092862769",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-09e8d3c88f7fd7a59"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-033b15d09f06e9a97",
            "owner_id": "412092862769",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05be889888911be3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-09e8d3c88f7fd7a59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee7705329fafc7ef",
            "route_table_id": "rtb-033b15d09f06e9a97",
            "subnet_id": "subnet-015a5d0c0ccef6265"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090f3beb07305f61e",
            "route_table_id": "rtb-033b15d09f06e9a97",
            "subnet_id": "subnet-03ef634c78cbe3ab8"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412092862769:security-group/sg-0ec2923b659988583",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec2923b659988583",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "412092862769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e8d3c88f7fd7a59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412092862769:security-group/sg-006c65a17652ad787",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006c65a17652ad787",
            "ingress": [],
            "name": "terraform-eks-demo-node",
            "name_prefix": "",
            "owner_id": "412092862769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e8d3c88f7fd7a59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-node-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3142507495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ec2923b659988583",
            "self": false,
            "source_security_group_id": "sg-006c65a17652ad787",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_security_group.demo-node",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "194.44.36.148/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2948646790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ec2923b659988583",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-cluster-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 443,
            "id": "sgrule-898344571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c65a17652ad787",
            "self": false,
            "source_security_group_id": "sg-0ec2923b659988583",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_security_group.demo-node",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-cluster-others",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3734718252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006c65a17652ad787",
            "self": false,
            "source_security_group_id": "sg-0ec2923b659988583",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_security_group.demo-node",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3391889228",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-006c65a17652ad787",
            "self": false,
            "source_security_group_id": "sg-006c65a17652ad787",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-node",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412092862769:subnet/subnet-015a5d0c0ccef6265",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-015a5d0c0ccef6265",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412092862769",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-09e8d3c88f7fd7a59"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412092862769:subnet/subnet-03ef634c78cbe3ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03ef634c78cbe3ab8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412092862769",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-09e8d3c88f7fd7a59"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412092862769:vpc/vpc-09e8d3c88f7fd7a59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c5478b720d41da6",
            "default_route_table_id": "rtb-0f942fd7e21cb7466",
            "default_security_group_id": "sg-0d157914f3d74d76a",
            "dhcp_options_id": "dopt-a85d62c0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e8d3c88f7fd7a59",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f942fd7e21cb7466",
            "owner_id": "412092862769",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}